fix some spacing

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -509,6 +509,7 @@ section.featured-case-study {
 	display: flex;
 	flex-direction: column;
 	border-radius: var(--border-radius);
+	margin-top: 6rem;
 }
 
 section.featured-case-study .featured-case-study-image img {
